# UncleDon-Logger

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Example/: CMakeLists.txt  Example.cpp  MutiThreadExample.cpp
ULogger/: CMakeLists.txt
ULogger/include/: Logger.hpp
ULogger/src/: Logger.cpp
include/: Logger.hpp
lib/Windows/debug/: Logger.lib
src/: Logger.cpp
